[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/menus/CharacterCustomization.gd" type="Script" id=1]
[ext_resource path="res://assets/backgrounds/panel_tile.png" type="Texture" id=2]
[ext_resource path="res://assets/player_sprites/char_body.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/themes/menu_default.theme" type="Theme" id=4]

[node name="CharacterCustomization" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
theme = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 10.0
margin_right = 104.0
margin_bottom = 132.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hat_Model" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 96.0
margin_bottom = 14.0
custom_constants/separation = -1

[node name="Label" type="Label" parent="VBoxContainer/Hat_Model"]
margin_right = 96.0
margin_bottom = 7.0
text = "HAT MODEL"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Hat_Model"]
margin_top = 6.0
margin_right = 96.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hat_model_decrease_button" type="Button" parent="VBoxContainer/Hat_Model/HBoxContainer"]
margin_right = 12.0
margin_bottom = 8.0
rect_min_size = Vector2( 12, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "<"

[node name="Button2" type="Button" parent="VBoxContainer/Hat_Model/HBoxContainer"]
margin_left = 16.0
margin_right = 80.0
margin_bottom = 8.0
rect_min_size = Vector2( 64, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true

[node name="hat_model_increase_button" type="Button" parent="VBoxContainer/Hat_Model/HBoxContainer"]
margin_left = 84.0
margin_right = 96.0
margin_bottom = 8.0
rect_min_size = Vector2( 12, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = ">"

[node name="Hat" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 96.0
margin_bottom = 32.0
custom_constants/separation = -1

[node name="Label" type="Label" parent="VBoxContainer/Hat"]
margin_right = 96.0
margin_bottom = 7.0
text = "HAT"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Hat"]
margin_top = 6.0
margin_right = 96.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hat_decrease_button" type="Button" parent="VBoxContainer/Hat/HBoxContainer"]
margin_right = 12.0
margin_bottom = 8.0
rect_min_size = Vector2( 12, 0 )
text = "<"

[node name="Button2" type="Button" parent="VBoxContainer/Hat/HBoxContainer"]
margin_left = 16.0
margin_right = 80.0
margin_bottom = 8.0
rect_min_size = Vector2( 64, 0 )
disabled = true

[node name="hat_increase_button" type="Button" parent="VBoxContainer/Hat/HBoxContainer"]
margin_left = 84.0
margin_right = 96.0
margin_bottom = 8.0
rect_min_size = Vector2( 12, 0 )
text = ">"

[node name="Torso" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 96.0
margin_bottom = 50.0
custom_constants/separation = -1

[node name="Label" type="Label" parent="VBoxContainer/Torso"]
margin_right = 96.0
margin_bottom = 7.0
text = "TORSO"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Torso"]
margin_top = 6.0
margin_right = 96.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="torso_decrease_button" type="Button" parent="VBoxContainer/Torso/HBoxContainer"]
margin_right = 12.0
margin_bottom = 8.0
rect_min_size = Vector2( 12, 0 )
text = "<"

[node name="Button2" type="Button" parent="VBoxContainer/Torso/HBoxContainer"]
margin_left = 16.0
margin_right = 80.0
margin_bottom = 8.0
rect_min_size = Vector2( 64, 0 )
disabled = true

[node name="torso_increase_button" type="Button" parent="VBoxContainer/Torso/HBoxContainer"]
margin_left = 84.0
margin_right = 96.0
margin_bottom = 8.0
rect_min_size = Vector2( 12, 0 )
text = ">"

[node name="Pants" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 96.0
margin_bottom = 68.0
custom_constants/separation = -1

[node name="Label" type="Label" parent="VBoxContainer/Pants"]
margin_right = 96.0
margin_bottom = 7.0
text = "PANTS"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Pants"]
margin_top = 6.0
margin_right = 96.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="legs_decrease_button" type="Button" parent="VBoxContainer/Pants/HBoxContainer"]
margin_right = 12.0
margin_bottom = 8.0
rect_min_size = Vector2( 12, 0 )
text = "<"

[node name="Button2" type="Button" parent="VBoxContainer/Pants/HBoxContainer"]
margin_left = 16.0
margin_right = 80.0
margin_bottom = 8.0
rect_min_size = Vector2( 64, 0 )
disabled = true

[node name="legs_increase_button" type="Button" parent="VBoxContainer/Pants/HBoxContainer"]
margin_left = 84.0
margin_right = 96.0
margin_bottom = 8.0
rect_min_size = Vector2( 12, 0 )
text = ">"

[node name="Laser_Beam" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 96.0
margin_bottom = 86.0
custom_constants/separation = -1

[node name="Label" type="Label" parent="VBoxContainer/Laser_Beam"]
margin_right = 96.0
margin_bottom = 7.0
text = "LASER BEAM"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Laser_Beam"]
margin_top = 6.0
margin_right = 96.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="laser_beam_decrease_button" type="Button" parent="VBoxContainer/Laser_Beam/HBoxContainer"]
margin_right = 12.0
margin_bottom = 8.0
rect_min_size = Vector2( 12, 0 )
text = "<"

[node name="Button2" type="Button" parent="VBoxContainer/Laser_Beam/HBoxContainer"]
margin_left = 16.0
margin_right = 80.0
margin_bottom = 8.0
rect_min_size = Vector2( 64, 0 )
disabled = true

[node name="laser_beam_increase_button" type="Button" parent="VBoxContainer/Laser_Beam/HBoxContainer"]
margin_left = 84.0
margin_right = 96.0
margin_bottom = 8.0
rect_min_size = Vector2( 12, 0 )
text = ">"

[node name="Laser_Glow" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 96.0
margin_bottom = 104.0
custom_constants/separation = -1

[node name="Label" type="Label" parent="VBoxContainer/Laser_Glow"]
margin_right = 96.0
margin_bottom = 7.0
text = "LASER GLOW"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Laser_Glow"]
margin_top = 6.0
margin_right = 96.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="laser_glow_decrease_button" type="Button" parent="VBoxContainer/Laser_Glow/HBoxContainer"]
margin_right = 12.0
margin_bottom = 8.0
rect_min_size = Vector2( 12, 0 )
text = "<"

[node name="Button2" type="Button" parent="VBoxContainer/Laser_Glow/HBoxContainer"]
margin_left = 16.0
margin_right = 80.0
margin_bottom = 8.0
rect_min_size = Vector2( 64, 0 )
disabled = true

[node name="laser_glow_increase_button" type="Button" parent="VBoxContainer/Laser_Glow/HBoxContainer"]
margin_left = 84.0
margin_right = 96.0
margin_bottom = 8.0
rect_min_size = Vector2( 12, 0 )
text = ">"

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 96.0
margin_bottom = 116.0
text = "EXIT"

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 0.396078, 0.396078, 0.396078, 1 )
margin_left = 177.383
margin_top = 13.5281
margin_right = 234.383
margin_bottom = 86.5281
texture = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background2" type="TextureRect" parent="."]
modulate = Color( 0.286275, 0.698039, 1, 1 )
margin_left = 177.383
margin_top = 85.5281
margin_right = 234.383
margin_bottom = 94.5281
texture = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" parent="." instance=ExtResource( 3 )]
self_modulate = Color( 0.128906, 0.128906, 0.128906, 1 )
position = Vector2( 203.383, 62.3054 )
rotation = -3.14159
scale = Vector2( 3, -3 )

[connection signal="pressed" from="VBoxContainer/Hat_Model/HBoxContainer/hat_model_decrease_button" to="." method="_on_hat_model_decrease_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Hat_Model/HBoxContainer/hat_model_increase_button" to="." method="_on_hat_model_increase_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Hat/HBoxContainer/hat_decrease_button" to="." method="_on_hat_decrease_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Hat/HBoxContainer/hat_increase_button" to="." method="_on_hat_increase_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Torso/HBoxContainer/torso_decrease_button" to="." method="_on_torso_decrease_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Torso/HBoxContainer/torso_increase_button" to="." method="_on_torso_increase_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Pants/HBoxContainer/legs_decrease_button" to="." method="_on_legs_decrease_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Pants/HBoxContainer/legs_increase_button" to="." method="_on_legs_increase_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Laser_Beam/HBoxContainer/laser_beam_decrease_button" to="." method="_on_laser_beam_decrease_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Laser_Beam/HBoxContainer/laser_beam_increase_button" to="." method="_on_laser_beam_increase_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Laser_Glow/HBoxContainer/laser_glow_decrease_button" to="." method="_on_laser_glow_decrease_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Laser_Glow/HBoxContainer/laser_glow_increase_button" to="." method="_on_laser_glow_increase_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
